--- a/index.htm
+++ b/index.htm
@@ -1,170 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Binary Pattern Generator v0.9</title>
+    <title>Binary Pattern Generator v0.95</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
-    <script>
-        const functions = [
-    "((((-x) * (y ^ param1)) / (~(x | param2))) & (((4 + y) % (~x)) * ((y | y) | (x % param3)))) % 10  // 01",
-    "((((param1 - y) & (x & x)) ^ ((x * param2) ^ (y & param2))) % (((-y) * (y + 20)) + ((x ^ param3) * (y * y)))) % param3  // 02",
-    "((((x % param1) - (param2 / y)) | ((~x) - (-y))) ^ (((y & y) - (x | y)) + ((y + y) * (x * y)))) % param3  // 03",
-    "((((y - x) | (param1 / x)) / (~(y ^ x))) * ((~(~y)) & (~(y & param2)))) % param3  // 04",
-    "((((y | x) & (~y)) | ((~x) ** (y & y))) & (((x ^ y) & (x * param1)) - ((-y) - (x & y)))) % param2  // 05",
-    "((((~y) & (-param1 * x)) | (-(y & y))) - (((-x) / (-param2 * y)) | (~(y % x)))) % param3  // 06",
-    "((((~y) % (x - param1)) - (-(~y))) - (((~x) - (y / param2)) & (-(1 ^ y)))) % param3  // 07",
-    "(((-(y / param1)) / ((x | param2) & (x / y))) | ((-(x / x)) - (-(x / param3)))) % 8  // 08",
-    "((-((21 - x) ^ (y + param1))) + (((y | y) * (y * x)) | ((param2 + x) & (param3 - x)))) % 5  // 09",
-    "((-((param1 % y) + (y % y))) & ((~(~x)) & ((x % param2) % (y + 3)))) % param3  // 10",
-    "((-((x | y) | (param1 & y))) ^ (((x / y) * (~y)) % ((x & param2) & (~y)))) % param3  // 11",
-    "((-((x | y) | (param1 * y))) ^ (((x / y) * (~y)) % ((x & param2) & (~y)))) % param3  // 12",
-    "((-((~y) * (y | x))) * ((~(~y)) % (-(x - y)))) % param1  // 13",
-    "((~((param1 & x) - (y * x))) % (((-x) ^ (y / y)) - (-(param2 ^ x)))) % param3  // 14",
-    "((~((x * param1) % (x + y))) ^ (((1 ^ y) ^ (-y)) - (~(y / param2)))) % param3  // 15",
-    "(x | y) & ((x ^ param1) | (y & param2))  // 16",
-    "((((x + param1) ^ (x | x)) | (~(-y))) % (~(~(param2 & x)))) % param3  // 17",
-    "((((~x) * (y * y)) ^ (~(~x))) & ((-(-x)) / ((y / param1) | (y - param2)))) % param3  // 18",
-    "((((-x) % (-y)) & ((param1 / x) * (x - x))) | (((y - 19) ^ (y + param2)) % ((y & x) % (x ^ y)))) % param3  // 19",
-    "((-(x * y * param1)) * (-(x % Math.abs(param2))) & (-(~(x * x)))) % (2 * param3 +1) // 20",
-    "((((y | y) % (param1 % x)) - (-(y / param2))) + ((~(x / param3)) - ((x - y) | (x - y)))) % 4  // 21",
-    "(~(((y * y) * (-x)) - ((x / y) % (~x)))) % param1  // 22",
-    "((~(-(Math.abs(param1) * x - y))) % (((~y) - (x - param2)) | (~(y & x)))) % param3  // 23",
-    "(~(((param1 - x) ^ (x & y)) & ((~param2) * (y ^ x)))) % param3  // 24",
-    "(~(((param1 - x) ^ (x & y)) & ((~x) * (y ^ x) * Math.abs(param2)))) % param3  // 25",
-    "((((x ^ x) % (-x)) / ((x + x) / (param1 ^ x))) + (((y ^ y) / (~y)) - (-(y % param2)))) % param3  // 26",
-    "(((~(x & y)) + ((~y) & (y | param1))) & (((~x) + (x & y)) - ((x / param2) | (x * y)))) % param3  // 27",
-    "((((y ^ y) + (param1 % y)) + ((~y) | (-x))) % (((x | x) - (param2 % y)) | ((-x) + (y + x)))) % param3  // 28",
-    "((-(-(-x))) ^ (~((y & x) % (y * y)))) % param1  // 29",
-    "(((~(param1 + x)) + ((x + x) + (y / param2))) | (((-y) % (x ^ y)) + ((~x) * (-y)))) % param3  // 30",
-    "((((x * param1) | (y * x)) / ((y * y) % (-x))) | (((y % param2) & (y * x)) / ((y / x) & (7 - x)))) % param3  // 31",
-    "((-((y & x) | (-x))) & (((~y) / (param1 ^ y)) ^ ((-x) & (y / y)))) % param2  // 32",
-    "((((x * y) + (-x)) / ((-x) ^ (~y))) | ((-(param1 ^ x)) % ((param2 - x) & (x / y)))) % param3  // 33",
-    "((((~y) * (y * x)) ^ ((param1 - x) + (param2 + y))) ^ (((x * y) / (x | y)) % ((y | x) * (-x)))) % param3  // 34",
-    "(-((~(y % x)) | ((x * param1) & (x + param2)))) % param3  // 35",
-    "((~((x * y) - (~x))) & (((-x) ^ (x * (2 * param1 + 1))) & ((param2 ^ x) ^ (y ^ 7)))) % param3  // 36",
-    "((~((x - param1) % (-y))) & (((x ^ y) + (~x)) ^ ((param2 + x) | (~y)))) % param3  // 37",
-    "(~(-((y / param1) - (x % param2)))) % param3  // 38",
-    "(-(((x - y ^ Math.abs(param1) & (~y * Math.abs(param2)) % (-(x * y))))) % param3  // 39",
-    "((((13 + y) + (param1 % x)) * ((y - x) - (param2 / x))) + ((-(-x)) / ((y + x) - (-x)))) % param3  // 40",
-    "(~(((y * y) | (param1 - x)) * ((param3 % x) | (x ^ param2)))) % 7  // 41",
-    "(-(((x | y) + (x % y)) - ((param1 & y) | (y * y)))) % param2  // 42",
-    "((~((y * param1) % (x + y))) ^ (((1 ^ y) ^ (-y)) - (~(y / param2)))) % param3  // 43",
-    "(~((-(y * x)) | ((y / x) - (y % param1)))) % param2  // 44",
-    "((-(~(y | x))) | (((param1 & y) / (x / param2)) | ((-y) & (x ^ 7)))) % param3  // 45",
-    "(~(-((y % x) % (x * param1)))) % param2  // 46",
-    "((((-x) % (-y)) * ((x - y) / (y * x))) | (-(~(x + param1)))) % param2  // 47",
-    "((((param1 - y) | (y | x)) & (~(y | y))) - (((x - 17) | (x % x)) + (~(x ^ param2)))) % param3  // 48",
-    "(((~(-y)) | ((y / y) % (-y))) - (((param1 ^ x) & (y * param2)) * (-(~y)))) % param3  // 49",
-    "((((Math.abs(param1) | y) & (-x)) % (~(param2 & x))) & (~((y + 6) - (~x)))) % param3  // 50",
-    "((~((x * param1) % (x ^ y))) ^ (((1 ^ y) ^ (-y)) - (~(y / param2)))) % param3  // 51",
-    "(((-(y % param1)) | ((y ^ x) + (~y))) | (((-y) + (-y)) ^ ((-x) * (x * y)))) % param2  // 52",
-    "(-(((-x) % (x / param1)) ^ ((param2 & x) / (-y)))) % param3  // 53",
-    "((((x + param1) ^ -x) ^ ((~y) ^ (y % y))) & (((y & param2) / (~x)) * ((~y) | (y / x)))) % param3  // 54",
-    "((((y - x) & (x * x)) + ((-y) ^ (x % param1))) * ((-(13 + x)) - ((x * param2) ^ (7 - y)))) % param3  // 55",
-    "((((param1 % x) | (~y)) + ((y % y) | (-y))) & ((-(param2 / y)) | (~(~x)))) % param3  // 56",
-    "((~((~y) % (~x))) & (((y / y) - (y / param1)) ^ ((x & y) * (param2 & x)))) % param3  // 57",
-    "(-(~((y - param1) % (-x)))) % param2  // 58",
-    "((-((~x) / (x ^ param1))) + (-((y / param2) % (~y)))) % param3  // 59",
-    "((~((~x) + (y | param1))) * (((param2 / x) - (-x)) - ((8 - y) / (x * y)))) % param3  // 60",
-    "((-((-param1 - x) ^ (y | y))) % (-(-(x % y)))) % param2  // 61",
-    "(~(((x * param1) / (-y)) | ((param2 - y) - (x / y)))) % param3  // 62",
-    "(~(((~x) ^ (y + x)) % (~(~x - param1)))) % param2  // 63",
-    "((~((y % x) | (x % x))) / (((y % x) & (param1 & x)) * (~(y ^ Math.abs(param2)))) % param3  // 64",
-    "(((x - y) | ((param1 + y) - (~x))) * (((param2 % x) / (-y)) | ((~y) - (y - x)))) % param3  // 65",
-    "((-((~x) / (x ^ param1))) + (-((y / x) % (~y)))) % param2  // 66",
-    "((~((~x) + (y | param1))) * (((param2 / x) - (-x)) - ((8 - y) / (x * y)))) % param3  // 67",
-    "(((~(y ^ x)) / ((param1 ^ y) % (~y))) / ((~(11 - x)) / ((param2 * x) - (y * param3)))) % param3  // 68",
-    "(((~(-x)) * ((param1 & x) & (y ^ x))) & ((~(-y)) * ((-x) & (param2 & y)))) % (param3 * 2 + 1)  // 69",
-    "(((-(y & y)) ^ ((param1 / x) * (-x))) | (((~x) | (y + param2)) * (~(y ^ x)))) % param3  // 70",
-    "(((~x) - (param1 & y)) / (~(param1 % x))) % (((-y) | (y + y)) & (-(y - param2)))  // 71",
-    "((((y + param1) & (param2 ^ x)) / ((y & x) ^ (y ^ 8))) - ((~(~y)) & (-(param3 % x)))) % 5  // 72",
-    "((((x ^ x) | (y - param1)) + ((x / y) / (-y))) ^ (-((x - param2) * (-y)))) % param3  // 73",
-    "((-(-(x | param1))) * (~(-(param2 ^ y)))) % param3  // 74",
-    "((((x - param1) + (y / y)) % (~(y - x))) & (-((y - param1) % (param2 * y)))) % param3  // 75",
-    "((~(~(~x))) ^ ((-(x % param1)) ^ ((1 / y) / (param2 % y)))) % param3  // 76",
-    "(((-(param1 + y)) & (-(-x))) - (((-x) + (y | x)) * (~(x + param2)))) % param3  // 77",
-    "((((param1 & x) - (y / param2)) / ((x & x) % (x | 17))) | (~((10 - y) - (y & x)))) % param3  // 78",
-    "((((~y) * (~x)) / (~(y + x))) + ((~(y ^ param1)) - ((~y) & (~y)))) % param2  // 79",
-    "((((y + x) - (x + param1)) * (~(~y))) + (((-y) & (y % x)) * ((x & param2) ^ (x & x)))) % param3  // 80",
-    "(((y & param1) + (x + x)) * ((y | x) * (x & x))) & (((param2 ^ y) * (x % param3)) % ((x + x) | (y / x)))  // 81",
-    "(((y & (2 * param1 + 1)) + (x + x)) * ((y | x) * (x & x))) & (((param2 ^ y) * (x % param3)) % ((x + x) | (y / x)))  // 82",
-    "(~(((param1 - y) % (-x)) | ((y / x) / (~y)))) % param2  // 83",
-    "(~(((param1 - y) % (-x)) | ((y / x) / (~y)))) % param2  // 84",
-    "(-((~(param1 / x)) % ((y ^ x) / (-x)))) % param2  // 85",
-    "((~((~y) / (x ^ y))) % ((~(x ^ x)) * ((y + param2) | (~y)))) % param3  // 86",
-    "(~(((y ^ param1) / (y / x)) - (-(-y)))) % param2  // 87",
-    "((((param1 & y) * (param2 + y)) & ((x + x) ^ (x - 9))) + (~((x - 3) / (-y)))) % param3  // 88",
-    "(((~(18 - y)) + ((y % param1) + (x ^ x))) + ((~(y % param2)) | ((x - y) * (x / y)))) % param3  // 89",
-    "~(~((-y * param1) ^ (-x * param2))) % param3  // 90",
-    "((((-y) * (x + param1)) ^ ((y / param2) ^ (~y))) - (-(~(-y)))) % param3  // 91",
-    "(((~(y | param1)) * (~(1 & y))) & (((y * x) * (param1 * y)) + ((~y) ^ (x * param2)))) % 3  // 92",
-    "((((y & param1) - (x - x)) - (~(x & param2))) ^ ((~(x * 2)) / ((3 - y) % (x + y)))) % param3  // 93", 
-    "((-(-(y % y))) + (-((~y) % (param1 - x)))) % param2  // 94", 
-    "((((y % x) ^ (param1 | x)) - ((y ^ Math.abs(param2) % (x % y))) / (-(-(-y)))) % param3  // 95", 
-    "((((param1 + y) | (-y)) % ((x % param2) % (y - x))) - ((~(y * param3)) | (-(x + y)))) % param3  // 96", 
-    "(((~(x + y)) + ((-x) / (param1 | x))) / (((x % y) + (x ^ y)) ^ ((param2 - x) - (x + x)))) % param3  // 97", 
-    "(~((-(param1 | y)) | ((param2 ^ x) % (x + x)))) % param3  // 98",
-    "((((y ^ x) % (param1 ^ y)) - ((y | y) * (y % x))) & ((-(y - x)) & ((y - param2) ^ (y + x)))) % param3  // 99", 
-    "((((~y) / (param1 ^ x)) + ((y * param2) ^ (x + y))) + (~((x + y) - (-x)))) % 3  // 100", 
-    "((((x / y) * (~y)) % ((~x) - (param1 / x))) ^ (((y % y) | (y | param2)) ^ (~(~y)))) % param3  // 101",
-    "((~((~y) & (-y))) / (((param1 % x) - (2 & x)) ^ ((y - y) % (param2 % x)))) % param3  // 102", 
-    "(~(-((y * x) ^ (y / Math.abs(param1))))) % param2  // 103", 
-    "((-((x - y) - (~x))) ^ (((x | y) * (x + y)) ^ ((y + param1) * (x | param2)))) % param3  // 105", 
-    "((((y & x) - (~x)) ^ ((Math.abs(param1) | y) ^ (x % param2))) | ((-(x & y)) & (~(~y)))) % param3 / 2  // 106", 
-    "((-((7 * y) - (~x))) + (((~x) - (x | param1)) + ((x * Math.abs(param2)) - (x ^ 3)))) % param3  // 107",
-    "((~(~(~y))) ^ (~((x % param1) % (x % y)))) % param2  // 108", 
-    "((((~x) % (-y)) - ((x | y) + (param1 - x))) * (~(-(x % param2)))) % param3  // 109", 
-    "(( ((130 * Math.abs(param1) - y)) + (~x) - ((x ^ x) | (x | y))) ^ (-((~x) - (x * Math.abs(param2))))) % param3 / 2  // 111",
-    "((((x | y) - (x + 1)) % ((y - param1) - (x * y))) - (((x % y) & (3 * x)) % ((y ^ param2) ^ (x / param3))))  // 111",
-    "(((-(x & x)) & ((param1 | y) - (-y))) / (((y & y) ^ (~x)) - ((-y) ^ (x & x)))) % param2  // 112",
-    "((((~y + param1) * (~x)) + (~(y + param2))) + ((~y) - ((~y) & (~y)))) % param3  // 113",
-    "((((~x) + (1 | y)) % ((x - x) - (y - param1))) - (((-y) | (y - y)) * ((x / y) ^ (param2 & x)))) % param3  // 114",
-    "(((y & (2 * param1 + 1)) + (x + x)) * ((y | x) * (x & x))) & (((param2 ^ y) * (x % param3)) % ((x + x) | (y / x)))  // 115",
-    "((((param1 | x) % (y - 18)) & (~(~x))) + (-(~(y * Math.abs(param2))))) % param3  // 116",
-    "((((x % y) - (x ^ param3)) - ((y | y) * (y * -Math.abs(param1)))) + ((-(x * x)) * ((x / y) & (-x)))) % param2  // 117",
-    "((((y - x) % (y + param1)) - ((-y) - (-y))) % (~((x & param2) ^ (x * x)))) % param3  // 118", 
-    "((((y ^ 2 + Math.abs(param1)) % (y + x)) - ((-y) - (-y))) % (~((y & param2) ^ (x * x)))) % param3  // 119", 
-    "((((x ^ y) + (x ^ param1)) - (-(y * x))) % (-(~(-x * param2)))) % param3  // 120", 
-    "((((11 - x) / (y & y)) ^ ((~x) * (y + param1))) / ((-(~x)) % ((~y) | (param2 | x)))) % param3  // 121", 
-    "(((~(y + y)) / ((y | param1) + (param2 | x))) - (~((-x) % (x - 3)))) % param3  // 122",
-    "((((x * x) + (param1 & x)) & ((~x) + (~x))) / (~(-(y & param2)))) % param3 // 123", 
-    "((((param1 | x) / (x | x)) * (-(x / y))) - (((x & x) + (-Math.abs(50 - param2) * y)) + ((-x) * (8 - x)))) % param3 // 124", 
-    "((((param1 | x) / (x | x)) * (-(x / y))) - (((x & x) + (-y)) + ((-x) * (param2 ^ 2 - x)))) % param3 // 125", 
-    "(-(-((param1 + x - y) ^ (~x)))) % param2 // 126", 
-    "(-(-((-Math.abs(param1) | y) ^ (~x)))) % param2 // 127", 
-    "((-(-(x / y))) - ((~(x & param1)) ^ ((x | x) & (param2 + x)))) % param3 // 128",
-    "((((2 + y) & (y | y)) + ((y ^ y) / (-x))) / (((param1 - y) | (-y)) - ((x & param2) - (x + x)))) % param3 // 129",
-    "((-((~y) & (-x))) - ((-(y % param1)) + (~(param2 | x)))) % param3 // 130",
-    "((((x ^ param1) + (10 % y)) * ((x - 20) / (x | param2))) * (~((-x) - (~y)))) % param3 // 131", 
-    "((-((~y * Math.abs(param1)) - (x + y))) / (((-y) * (~x | param2)) & (~(~y)))) % param3  // 132", 
-    "((~((x / Math.abs(param1)) | (param2 ^ x))) * (((y * y) * (~x)) - (~(y | 23)))) % param3 // 133", 
-    "(~((-(param1 + x)) & ((-y) / (x + param2)))) % param3   // 134", 
-    "((((-y) - (param1 ^ y)) % ((~x) % (~y))) + (-(-(x ^ Math.abs(param2))))) % param3  // 135", 
-    "(~(((y | x) & (x % 3)) ^ ((y * Math.abs(param2)) / (-x + param1)))) % param3  // 136", 
-    "((~((y ^ param1) + (~x))) ^ (((y / x) * (param2 ^ x)) ^ ((x + 18) + (16 | y)))) % param3  // 137",
-    "((~((x * y) - (~x))) & (((-x) ^ (x * (2 * param1 + 1))) & ((param2 ^ x) ^ (y ^ 7)))) % ( 2 * param3 + 1 )  // 138",
-    "((((param1 & y) / (y & y)) ^ ((-x) * (~x))) + ((-(y / x)) + ((y * 7) ^ (y * param2)))) % param3 // 139", 
-    "((((x * x) ^ (-x)) % (-(param1 - y))) | ((-(x - y)) ^ ((-x) | (param2 / y)))) % param3  // 140",
-    "((~((y & x) + (param1 + y))) ^ (~((param2 + x) & (~y)))) % param3  // 141",
-    "((~((~x) & (param1 ^ x))) * (((-Math.abs(param2) ^ y) + (~x)) - (~(x + x)))) % param3  // 142",
-    "((~(-(7 ^ x))) + ((-(param1 * x)) / ((y % param2) % (19 - y)))) % param3  // 143",
-    "((((~x) - (param1 / x)) & ((x % y) + (param2 & y))) + (((~x) / (y | y)) & ((y / param3) & (x * 11))))   // 144",
-    "(~(((y | param1) % x) + ((y * -Math.abs(param2)) * (y * x)))) % param3    // 145",
-    "(~(((x + y) * (~y / Math.abs(param1))) ^ ((y | y) & (x / param2)))) % param3  // 146",
-    "(-(((-y) ^ (Math.abs(param1) | x)) % ((-x * param2) | (~x)))) % param3  // 147",
-    "((((Math.abs(param1) | x) | (x & (y - param2))) % (-(y + x))) & (((-x) / (~y)) / ((~y) ^ (1 * y)))) % param3  // 148",
-    "(((~(param1 + y)) & ((x | y) | (~y))) + (((~x) & (~y)) / ((-x) % (param2 & x)))) % param3  // 149", 
-    "((((y - x) / (-x)) | (-(y + y))) + (((14 & x) - (y & y)) ^ ((y ^ param1) + (param2 ^ x)))) % param3  // 150",
-    "(~(((y * param1) & (x ^ 18)) | ((-Math.abs(param2) * y) % (param2 ^ x)))) % param3 // 151",
-    "((((y | 17) / (x + param1)) & (-(x ^ y))) / (((param2 - x) | (y % x)) / ((~y) + (x ^ y)))) % param3  // 152",
-    "((~(-(y % param1))) | (((param2 - x) - (y % param1)) & ((y ^ x) % (15 - y)))) % (param3 / 10)  // 153",
-    "((~(-(y % param1))) | (((param2 - x) - (y % param1)) & ((y ^ x) % (15 - y)))) % parseInt(param3 / 10)  // 154"
-        ];
-
-    </script>
+    <!-- 1BIT SHADER FUNCTIONS -->
+    <script src="js/functions.js"> </script>
 
     <div class="sidebar">
         <div class="title">Pattern Controls</div>
@@ -215,7 +59,7 @@
     <div class="sidebar">
         <a href="https://github.com/masayume/1bit-pattern-gen/"></a><h2>Binary Pattern Generator</h2></a>
         <p id="par1">
-            by <a href="https://masayume.it">masayume</a>, ver. <b>0.9</b>, functions: 
+            by <a href="https://masayume.it">masayume</a>, ver. <b>0.95</b>, functions: 
         </p>
         <script>
             par1.textContent += (functions.length + 1);
