--- a/index.htm
+++ b/index.htm
@@ -43,7 +43,8 @@
         <div class="button-group" style="width: 102%; ">
             <button id="invert-btn" class="glass-button" title="black/white invert"><i class="fa-solid fa-square"></i></button>
             <button id="integer-btn" class="glass-button" title="proper 1-bit output"><i class="fa-solid fa-wave-square"></i></button>
-            <button id="dithering-btn" class="glass-button" title="switch dithering"><i class="fa-solid fa-border-none"></i></button>
+            <button id="dithering-btn" class="glass-button" title="switch bayesian dithering"><i class="fa-solid fa-border-none"></i></button>
+            <button id="floydstein-btn" class="glass-button" title="switch Floyd-Steinberg dithering"><i class="fa-solid fa-border-none"></i></button>
             <button id="color-btn" class="glass-button" title="color gradients; not implemented yet"><i class="fa-solid fa-droplet"></i></button>
         </div>
 
@@ -53,7 +54,7 @@
             <button id="rndfn-btn" class="glass-button" title="plot random function"><b><i class="fa-solid fa-dice"></i><br />fn</b></button>
             <button id="omoshiroi-btn" class="glass-button" title="interesting functions"><i class="fa-solid fa-dice"><br />楽</i></button>
             <button id="grayscale-btn" class="glass-button" title="grayscale functions"><i class="fa-solid fa-dice"><br />鼠</i></button>
-            <button id="rndfn-val" class="glass-button" title="set random param values"><b><i class="fa-solid fa-shuffle"></i><br />par</b></button>
+            <button id="rndfn-val" class="glass-button-wide" title="set random param values"><b><i class="fa-solid fa-shuffle"></i><br />par</b></button>
             <button id="update-btn" class="glass-button" title="update plotting"><i class="fa-solid fa-rotate-right"></i></button>
         </div>
 
@@ -121,9 +122,11 @@
         const ctx = canvas.getContext('2d');
         const scale = 3;
         const baseSize = 256;
+
         let   invert = 0;
         let   tointeger = 0;
         let   beyerDithering = 0;
+        let   floydsteinDithering = 0;
 
         const bufferCanvas = document.createElement('canvas');
         bufferCanvas.width = baseSize;
@@ -137,7 +140,8 @@
         const modfunInput = document.getElementById('modfun');
         const invertInput = document.getElementById('invert-btn');
         const integerInput = document.getElementById('integer-btn');
-        const ditheringInput = document.getElementById('dithering-btn');
+        const ditheringInput = document.getElementById('dithering-btn'); 
+        const floydsteinInput = document.getElementById('floydstein-btn');         
         const functionCode = document.getElementById('function-code');
         const updateBtn = document.getElementById('update-btn');
         const omoshiroiBtn = document.getElementById('omoshiroi-btn');
@@ -168,6 +172,7 @@
         invertInput.addEventListener('click', invertVal);
         integerInput.addEventListener('click', integerVal);
         ditheringInput.addEventListener('click', ditheringVal);
+        floydsteinInput.addEventListener('click', floydsteinVal);        
         updateBtn.addEventListener('click', updatePattern);
         omoshiroiBtn.addEventListener('click',  omoshiroiSelect);
         grayscaleBtn.addEventListener('click',  grayscaleSelect);
