--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>1-bit Binary Pattern Generator v1.24</title>
+    <title>1-bit Binary Pattern Generator v1.3</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -66,7 +66,7 @@
 
     <div class="sidebar">
         <a href="https://github.com/masayume/1bit-pattern-gen/"><h2>Binary Pattern Generator</h2></a>
-        by <a href="https://masayume.it">masayume</a>, ver. <b>1.24</b>, 
+        by <a href="https://masayume.it">masayume</a>, ver. <b>1.3</b>, 
         <p id="par1">
         functions: 
         </p>
@@ -75,7 +75,7 @@
         </script>
         </p>
         <p id="par2">
-        raku functions: 
+        楽 raku functions: 
         </p>
         <script>
             rakufuncts = functions.filter(str => str.endsWith('楽'));
@@ -84,7 +84,7 @@
         </b>
 
         <p id="par3">
-        grayscale functions: 
+        鼠 grayscale functions: 
         </p>
         <script>
             grayfuncts = functions.filter(str => str.endsWith('鼠'));
@@ -102,7 +102,7 @@
             (the "onebit" scheme.)
         </p>
         <p>
-            The code does not resort to evaluating a string.
+            <a href="https://patternchecker.com/" target="_blank">Pattern checker tool</a>
         </p>
         </p>
         <div class="button-group">
