--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>1-bit Binary Pattern Generator v1.4</title>
+    <title>1-bit Binary Pattern Generator v1.44</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -67,7 +67,7 @@
 
     <div class="sidebar">
         <a href="https://github.com/masayume/1bit-pattern-gen/"><h2>Binary Pattern Generator</h2></a>
-        by <a href="https://masayume.it">masayume</a>, ver. <b>1.4</b>, 
+        by <a href="https://masayume.it">masayume</a>, ver. <b>1.44</b>, 
         <p id="par1">
         total functions available: 
         </p>
@@ -111,7 +111,11 @@
             (the "onebit" scheme.)
         </p>
         <p>
-            <a href="https://patternchecker.com/" target="_blank">Pattern checker tool</a>
+            <ul>
+                <li> <a href="https://patternchecker.com/" target="_blank">Pattern checker tool</a> </li>
+                <li> <a href="https://bitartnoise.altervista.org/Bitart9.html" target="_blank">Bitwise Art Gen</a> 
+                     <a href="/cosmo/bitart9.htm" target="_blank">(local)</a> </li>
+            </ul>
         </p>
         </p>
         <div class="button-group">
